--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="about__data">
           <p class="about__description">
-            I'm a third-year ISE undergraduate, passionate about technology and an avid reader. I have a self-motivated
+            I'm a third-year Agricultural Engineering undergraduate, passionate about technology and an avid reader. I have a self-motivated
             and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to
             enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff
             that interests me and can help me to get better.
@@ -219,13 +219,13 @@
             <div class="skills__list grid">
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">ArcGIS</h3>
+                  <h3 class="skills__name">QGIS</h3>
                 </div>
 
               </div>
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">DS & Algorithms</h3>
+                  <h3 class="skills__name">ArcGIS</h3>
                 </div>
 
               </div>
@@ -273,13 +273,6 @@
                   <h3 class="skills__name">CSS</h3>
                 </div>
 
-              </div>
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">NodeJs</h3>
-                </div>
-
-              </div>
 
 
             </div>
@@ -303,28 +296,8 @@
               </div>
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">MongoDB</h3>
+                  <h3 class="skills__name">Arduino IDE</h3>
                 </div>
-
-              </div>
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">MySQL</h3>
-                </div>
-
-              </div>
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">NextJs</h3>
-                </div>
-
-              </div>
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">NodeJs</h3>
-                </div>
-
-              </div>
 
 
             </div>
@@ -749,8 +722,8 @@
             <i class="uil uil-calling contact__icon"></i>
 
             <div>
-              <h3 class="contact__title">Contact Me</h3>
-              <span class="contact__subtitle"><a href="tel:6362243314"></a>+91-7302886011</span>
+              <h3 class="contact__title">Mobile</h3>
+              <span class="contact__subtitle"><a href="tel:7302886011"></a>+91-7302886011</span>
             </div>
           </div>
 
@@ -767,7 +740,7 @@
             <i class="uil uil-map-marker contact__icon"></i>
 
             <div>
-              <h3 class="contact__title">Location</h3>
+              <h3 class="contact__title">Address</h3>
               <span class="contact__subtitle">Agra, Uttar Pradesh, India</span>
             </div>
           </div>
