--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </a>
           </li>
           <li class="nav__item">
-            <a href="#contact" class="nav__link">
-              <i class="uil uil-message nav__icon"></i>Contact Me
+            <a download="" href="assets\Shyamendra's Resume.pdf" >
+              Download Resume<i class="fas fa-download button__icon"></i>
             </a>
           </li>
         </ul>
@@ -632,7 +632,7 @@
               <!-- ------------------------portfollio 2-------------------- -->
     
               <div class="portfolio__content grid swiper-slide">
-                <img src="assets/img/portfolio2.png" class="portfolio__img" />
+                <img src="assets/img/cultivator.PNG" class="portfolio__img" />
     
                 <div class="portfolio__data">
                   <h3 class="portfolio__title">
@@ -790,7 +790,10 @@
             <a href="#qualification" class="footer__link">Qualification</a>
           </li>
           <li>
-            <a href="#portfolio" class="footer__link">Portfolio</a>
+            <a href="#skills" class="footer__link">Skills</a>
+          </li>
+          <li>
+            <a href="#portfolio" class="footer__link">Projects</a>
           </li>
           <li>
             <a href="#contact" class="footer__link">Contact Me</a>
@@ -798,12 +801,12 @@
         </ul>
 
         <div class="footer__socials">
-          <a href="https://www.instagram.com/venkateeshh/" class="footer__social" target="__blank">
-            <i class="fa-brands fa-instagram"></i>
+          <a href="https://www.linkedin.com/in/shyamendrasingh/" class="footer__social" target="__blank">
+            <i class="fa-brands fa-linkedin"></i>
           </a>
 
-          <a href="https://twitter.com/Venkateeshhh" target="__blank" class="footer__social">
-            <i class="fa-brands fa-x-twitter"></i>
+          <a href="https://github.com/shyamendra-singh" target="__blank" class="footer__social">
+            <i class="fa-brands fa-github"></i>
           </a>
         </div>
       </div>
