--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <i class="fas fa-pencil-ruler skills__icon"></i>
 
               <div>
-                <h1 class="skills__title">CAD & 3D Modelling</h1>
+                <h1 class="skills__title">3D CAD & Modelling</h1>
               </div>
 
               <i class="uil uil-angle-down skills__arrow"></i>
@@ -638,18 +638,10 @@
 
           <!-- ------------------------portfollio 3-------------------- -->
           <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio3.png" class="portfolio__img" />
+            <img src="assets/img/hydroponics.png" class="portfolio__img" />
 
             <div class="portfolio__data">
-              <h4 class="design__title">Crop Recommendation Web App</h4>
-            </div>
-          </div>
-          <!-- ------------------------portfollio 4-------------------- -->
-          <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio4.png" class="portfolio__img" />
-
-            <div class="portfolio__data">
-              <h4 class="design__title">Soil Texture Classifier</h4>
+              <h4 class="design__title">Vertical Hydroponics Unit</h4>
             </div>
           </div>
 
